tests/invalid/08_duplicate_param.js
// 错误: 缺少函数体
function test(a, b, c)
